<resources>
    <string name="app_name">Bigital</string>
    <string name="title_text">Welcome to\n The Project</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="user_name">user_name</string>
    <string name="user_profile_pic">profile_pic</string>
    <string name="first_token">first_token</string>
    <string name="auth_failed">"Something went wrong please again later"</string>
    <string name="default_org">default_org</string>
    <string name="last_time_paired_orgs">Last Time Paired Orgs</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">refreshToken</string>
    <string name="last_active">Last Active</string>
    <string name="first_name">First Name*</string>
    <string name="full_name"> Full Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="answer"> Answer*</string>
    <string name="email_id">email id</string>
    <string name="contact_number">Contact Number</string>
    <string name="phone_number">phone_number</string>
    <string name="confirm">confirm</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="employee_role">Role of an Employee</string>
    <string name="profile_pic">Add Profile Pic</string>
    <string name="org_name">Organization*</string>
    <string name="org_branch">Branch</string>
    <string name="org_department">Department</string>
    <string name="org_tag_name">Tag Name*</string>
    <string name="org_address">Address*</string>
    <string name="org_city">City*</string>
    <string name="org_zip">Zip*</string>
    <string name="org_state">State*</string>
    <string name="org_country">Country*</string>
    <string name="org_itmes">OrganizationItems</string>
    <string name="server_url">https://project-backend-2.mybluemix.net</string>
    <string name="server_ur_templ">https://project-backend.mybluemix.net</string>
    <string name="http">http</string>
    <string name="account">/account</string>
    <string name="add_employee_endpoint">/add/employee</string>
    <string name="sign_up">/onboard</string>
    <string name="orders">/orders</string>
    <string name="order">order</string>
    <string name="org">/org</string>
    <string name="tag">/tag</string>
    <string name="orgs">orgs</string>
    <string name="get_outbox">/outbox</string>
    <string name="authy">/authy/verify</string>
    <string name="code">/authy/verify/code</string>
    <string name="search_org">/search/org</string>
    <string name="pair_org_request">/org/pair/</string>
    <string name="firebase_token">/firebaseToken</string>
    <string name="get_pending_orgs">/org/pair/pending/</string>
    <string name="get_requested_orgs">/org/pair/requested/</string>
    <string name="perform_action_on_org">/org/pair/action</string>
    <string name="record_activity">/record/activity</string>
    <string name="feedback">/feedback</string>
    <string name="get_paired_orgs">/org/pair</string>
    <string name="update_account">/account</string>
    <string name="get_contacts">/org/employee/phone_number</string>
    <string name="empty_msg_no_default_org_pair_org">You are not part of any organization, Please create an organization or become part of an organization</string>
    <string name="pair_org_no_request">No requests are pending, please click + button at the bottom to make request to another organization</string>
    <string name="not_authorized_view">You are not authorized to view this page</string>
    <string name="no_org_msg">You are not part of any organization, Please create organization by clicking drawer at left corner of screen or ask an organization to add you as an employee</string>
    <string name="no_outbox_order_msg">You have not made any orders, Please click + sign at the bottom right side of the screen to place an order</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="add_employee">Add Employee</string>
    <string name="place_order">Place Order</string>
    <string name="hard_reload">Hard Reload</string>
    <string name="hard_reload_pair_org">hard_reload_pair_org</string>
    <string name="hard_reload_outbox">hard_reload_outbox</string>
    <string name="hard_reload_inbox">hard_reload_inbox</string>
    <string name="to_company">To Comapany/Organization</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="message">Any additional request</string>
    <string name="sender_completed">Waiting for receiver acknowledgment</string>
    <string name="receiver_completed">Order Completed</string>
    <string name="cancel_order"> Cancel Order</string>
    <string name="cancelled">Order Cancelled</string>
    <string name="sumbit">sumbit</string>
    <string name="client_id">655096337332-m4hhrbs3c8gsj20mjtjahcl7c1o7ern8.apps.googleusercontent.com</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_storage">gs://project-ae9b7.appspot.com</string>
    <string name="CC">91</string>
    <string name="plus_sign">+</string>
    <string name="sign_in_msg">Enter your number to sign in or create an account</string>
    <string name="disclamer_msg">Bigital will send you a one time SMS message to verify your number. Carrier SMS charges may apply</string>
    <string name="sent_msg">We have sent an SMS with a code to the number </string>
    <string name="verification_msg">To complete your phone verification, please enter 6-digit activation code</string>
    <string name="differnet_org_notification_msg">Notification is not for current organization, Please change your organization to</string>
    <string name="number_of_notification">number-of-notification</string>
    <string name="app_label">Search Org</string>
    <string name="search_hint">Tag name or Org Name</string>
    <string name="pair_org_no_deafult_org_msg">Please associate organization to your account to use this feature</string>
    <string name="incoming_request">incoming_pair_org_request</string>
    <string name="outgoing_request">outgoing_pair_org_request</string>
    <string name="paired_orgs">paired_orgs</string>
    <string name="no_paired_orgs">Your organization is not paired with any other organization.</string>
    <string-array name="que_array">
        <item>What was your childhood nickname?</item>
        
        <item>What is your favorite team?</item>
        <item>What is your favorite movie?</item>
        <item>In what town was your first job?</item>
        
    </string-array>
    <string name="associated_orgs">Associated Organization</string>
    <string-array name="Country">
        <item>India</item>
    </string-array>
    <string-array name="State">
        <item>Andaman Nicobar</item>
        <item>Goa</item>
        <item>Andhra Pradesh</item>
        <item>Gujarat</item>
        <item>Arunanchal Pradesh</item>
        <item>Haryana</item>
        <item>Assam</item>
        <item>Himachal Pradesh</item>
        <item>Bihar</item>
        <item>Jammu Kashmir</item>
        <item>Chandigarh</item>
        <item>Jharkhand</item>
        <item>Chattisgarh</item>
        <item>Karnataka</item>
        <item>Dadar Nagar Haveli</item>
        <item>Kerala</item>
        <item>Daman Diu</item>
        <item>Lakshwdeep</item>
        <item>Madhya Pradesh</item>
        <item>Punjab</item>
        <item>Maharashtra</item>
        <item>Rajasthan</item>
        <item>Manipur</item>
        <item>Sikkim</item>
        <item>Meghalaya</item>
        <item>Tamil Nadu</item>
        <item>Mizoram</item>
        <item>Tripura</item>
        <item>Nagaland</item>
        <item>Uttar Pradesh</item>
        <item>New Delhi</item>
        <item>Uttaranchal</item>
        <item>Orissa</item>
        <item>West Bengal</item>
        <item>Pondicherry</item>
    </string-array>
    <string name="private_file">655096337332</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_create_org">Create Organization</string>
    <string name="title_activity_pair_org">Pair Organization</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_search_contact">Search Contact</string>
    <string name="title_activity_add_employee">Add an Employee</string>
    <string name="title_activity_place_order">Plan an Order</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_edit_org">Edit Organization</string>
    <string name="title_activity_view_org">View Organization</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_explore">Explore</string>
    <string name="other_activity">Other Activity</string>
    <string name="title_activity_outbox">Outbox</string>
    <string name="title_activity_search_org">Search Organizations</string>
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Username</string>
    <string name="tools_text_account_information_email">user@mail.com</string>
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string name="edit_org_no_permission">You don\'t have permission to edit org</string>
    <string name="banner_ad_unit_id">ca-app-pub-9656373787556865/8354034038</string>
    <string name="banner_app_id">ca-app-pub-9656373787556865~6877300833</string>
    <string name="title_activity_org_items">Organization Items</string>
</resources>