<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.rohitvyavahare.project.HomeActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rohitvyavahare.project.HomeActivity">

        <TextView
            android:id="@+id/OrderInbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inbox"
            android:textSize="45sp"
            android:onClick="onClick"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/back">
        </TextView>
        <TextView
            android:id="@+id/OrderOutbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outbox"
            android:textSize="45sp"
            android:onClick="onClick"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_marginTop="20dp">
        </TextView>
        <TextView
            android:id="@+id/AddEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_employee"
            android:textSize="45sp"
            android:onClick="onClick"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_marginTop="20dp">
        </TextView>
        <TextView
            android:id="@+id/PlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:textSize="45sp"
            android:onClick="onClick"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_marginTop="20dp">
        </TextView>

    </TableLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_home" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>
