<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_org"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rohitvyavahare.project.CreateOrgActivity">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/EditProfilePic"
                android:layout_width="200sp"
                android:layout_height="150sp"
                android:clickable="true"
                android:src="@drawable/group_icon"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4sp"
                app:civ_shadow="true"
                app:civ_shadow_color="#8BC34A"
                app:civ_shadow_radius="10" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:layout_marginTop="200sp">

            <EditText
                android:id="@+id/EditTextOrgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/org_name"
                android:inputType="textPersonName"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789!@#$%^*-_? &amp;"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:layout_marginTop="250sp">

            <EditText
                android:id="@+id/EditOrgTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/org_tag_name"
                android:inputType="textPersonName"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300sp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditOrgBranch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/org_branch"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:textSize="20sp"
                    android:nextFocusDown="@+id/EditDepartment"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/EditDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/org_department"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:layout_marginTop="350sp">

            <EditText
                android:id="@+id/EditOrgAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/org_address"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="400sp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/EditOrgCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="India"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginLeft="5sp"
                    android:maxLength="5"
                    android:textSize="20sp"
                    android:nextFocusDown="@+id/EditOrgState"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <AutoCompleteTextView
                    android:id="@+id/AutoComepleteOrgState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/org_state"
                    android:inputType="textPersonName"
                    android:editable="false"
                    android:textSize="20sp"
                    android:nextFocusDown="@+id/EditOrgCity"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="450sp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditOrgCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/org_city"
                    android:inputType="textPersonName"
                    android:maxLength="25"
                    android:textSize="20sp"
                    android:nextFocusDown="@+id/EditOrgZip"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/EditOrgZip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/org_zip"
                    android:inputType="numberSigned"
                    android:maxLength="10"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="500sp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_creat_org"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24sp"
                android:layout_marginTop="24sp"
                android:background="#FE7E24"
                android:padding="12sp"
                android:text="Submit"
                android:textColor="#ffffff" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>



